workspace/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
14:57:29 **** Incremental Build of configuration Debug for project lpc_board_nxp_lpcxpresso_1769 ****
make -r all 
Building file: ../src/board.c
Invoking: MCU C Compiler
arm-none-eabi-gcc -D__REDLIB__ -DDEBUG -D__CODE_RED -D__USE_LPCOPEN -DCORE_M3 -I"/home/jatin/Documents/MCUXpresso_10.3.0_2200/workspace/lpc_chip_175x_6x/inc" -I"/home/jatin/Documents/MCUXpresso_10.3.0_2200/workspace/lpc_board_nxp_lpcxpresso_1769/inc" -O0 -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -mcpu=cortex-m3 -mthumb -specs=redlib.specs -MMD -MP -MF"src/board.d" -MT"src/board.o" -MT"src/board.d" -o "src/board.o" "../src/board.c"
../src/board.c:33:20: warning: extra tokens at end of #include directive
 #include "string.h"ude "retarge************************************************
                    ^~~
../src/board.c:33:24: warning: missing terminating " character
 #include "string.h"ude "retarge************************************************
                        ^
../src/board.c:34:12: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'types'
  * Private types/enumerations/variables
            ^~~~~
../src/board.c: In function 'Board_I2C_Init':
../src/board.c:289:2: warning: enumeration value 'I2C_NUM_INTERFACE' not handled in switch [-Wswitch]
  switch (id) {
  ^~~~~~
src/subdir.mk:24: recipe for target 'src/board.o' failed
make: *** [src/board.o] Error 1
14:57:31 **** Incremental Build of configuration Debug for project lpc_chip_175x_6x ****
make -r all 
make: Nothing to be done for 'all'.
14:57:32 **** Incremental Build of configuration Debug for project jasbir ****
make -r -j4 all 
Building target: jasbir.axf
Invoking: MCU Linker
arm-none-eabi-gcc -nostdlib -L"/home/jatin/Documents/MCUXpresso_10.3.0_2200/workspace/lpc_board_nxp_lpcxpresso_1769/Debug" -L"/home/jatin/Documents/MCUXpresso_10.3.0_2200/workspace/lpc_chip_175x_6x/Debug" -Xlinker -Map="jasbir.map" -Xlinker --gc-sections -Xlinker -print-memory-usage -mcpu=cortex-m3 -mthumb -T "jasbir_Debug.ld" -o "jasbir.axf"  ./src/cr_startup_lpc175x_6x.o ./src/crp.o ./src/jasbir.o ./src/sysinit.o   -llpc_board_nxp_lpcxpresso_1769 -llpc_chip_175x_6x
/usr/local/mcuxpressoide-10.3.0_2200/ide/plugins/com.nxp.mcuxpresso.tools.linux_10.3.0.201811011841/tools/bin/../lib/gcc/arm-none-eabi/7.3.1/../../../../arm-none-eabi/bin/ld: cannot find -llpc_board_nxp_lpcxpresso_1769
makefile:30: recipe for target 'jasbir.axf' failed
collect2: error: ld returned 1 exit status
make: *** [jasbir.axf] Error 1
14:59:51 **** Incremental Build of configuration Debug for project lpc_board_nxp_lpcxpresso_1769 ****
make -r all 
Building file: ../src/board.c
Invoking: MCU C Compiler
arm-none-eabi-gcc -D__REDLIB__ -DDEBUG -D__CODE_RED -D__USE_LPCOPEN -DCORE_M3 -I"/home/jatin/Documents/MCUXpresso_10.3.0_2200/workspace/lpc_chip_175x_6x/inc" -I"/home/jatin/Documents/MCUXpresso_10.3.0_2200/workspace/lpc_board_nxp_lpcxpresso_1769/inc" -O0 -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -mcpu=cortex-m3 -mthumb -specs=redlib.specs -MMD -MP -MF"src/board.d" -MT"src/board.o" -MT"src/board.d" -o "src/board.o" "../src/board.c"
../src/board.c:33:20: warning: extra tokens at end of #include directive
 #include "string.h"ude "retarge************************************************
                    ^~~
../src/board.c:33:24: warning: missing terminating " character
 #include "string.h"ude "retarge************************************************
                        ^
../src/board.c:34:12: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'types'
  * Private types/enumerations/variables
            ^~~~~
../src/board.c: In function 'Board_I2C_Init':
../src/board.c:289:2: warning: enumeration value 'I2C_NUM_INTERFACE' not handled in switch [-Wswitch]
  switch (id) {
  ^~~~~~
make: *** [src/board.o] Error 1
src/subdir.mk:24: recipe for target 'src/board.o' failed
14:59:52 **** Incremental Build of configuration Debug for project lpc_chip_175x_6x ****
make -r all 
make: Nothing to be done for 'all'.
14:59:54 **** Build of configuration Debug for project jas ****
make -r -j4 all 
Building file: ../src/cr_startup_lpc175x_6x.c
Building file: ../src/crp.c
Building file: ../src/jas.c
Invoking: MCU C Compiler
arm-none-eabi-gcc -DDEBUG -D__CODE_RED -DCORE_M3 -D__USE_LPCOPEN -D__LPC17XX__ -D__REDLIB__ -I"/home/jatin/Documents/MCUXpresso_10.3.0_2200/workspace/lpc_board_nxp_lpcxpresso_1769/inc" -I"/home/jatin/Documents/MCUXpresso_10.3.0_2200/workspace/lpc_chip_175x_6x/inc" -O0 -fno-common -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -mcpu=cortex-m3 -mthumb -specs=redlib.specs -MMD -MP -MF"src/cr_startup_lpc175x_6x.d" -MT"src/cr_startup_lpc175x_6x.o" -MT"src/cr_startup_lpc175x_6x.d" -o "src/cr_startup_lpc175x_6x.o" "../src/cr_startup_lpc175x_6x.c"
Invoking: MCU C Compiler
arm-none-eabi-gcc -DDEBUG -D__CODE_RED -DCORE_M3 -D__USE_LPCOPEN -D__LPC17XX__ -D__REDLIB__ -I"/home/jatin/Documents/MCUXpresso_10.3.0_2200/workspace/lpc_board_nxp_lpcxpresso_1769/inc" -I"/home/jatin/Documents/MCUXpresso_10.3.0_2200/workspace/lpc_chip_175x_6x/inc" -O0 -fno-common -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -mcpu=cortex-m3 -mthumb -specs=redlib.specs -MMD -MP -MF"src/crp.d" -MT"src/crp.o" -MT"src/crp.d" -o "src/crp.o" "../src/crp.c"
Building file: ../src/sysinit.c
Invoking: MCU C Compiler
arm-none-eabi-gcc -DDEBUG -D__CODE_RED -DCORE_M3 -D__USE_LPCOPEN -D__LPC17XX__ -D__REDLIB__ -I"/home/jatin/Documents/MCUXpresso_10.3.0_2200/workspace/lpc_board_nxp_lpcxpresso_1769/inc" -I"/home/jatin/Documents/MCUXpresso_10.3.0_2200/workspace/lpc_chip_175x_6x/inc" -O0 -fno-common -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -mcpu=cortex-m3 -mthumb -specs=redlib.specs -MMD -MP -MF"src/jas.d" -MT"src/jas.o" -MT"src/jas.d" -o "src/jas.o" "../src/jas.c"
Invoking: MCU C Compiler
arm-none-eabi-gcc -DDEBUG -D__CODE_RED -DCORE_M3 -D__USE_LPCOPEN -D__LPC17XX__ -D__REDLIB__ -I"/home/jatin/Documents/MCUXpresso_10.3.0_2200/workspace/lpc_board_nxp_lpcxpresso_1769/inc" -I"/home/jatin/Documents/MCUXpresso_10.3.0_2200/workspace/lpc_chip_175x_6x/inc" -O0 -fno-common -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -mcpu=cortex-m3 -mthumb -specs=redlib.specs -MMD -MP -MF"src/sysinit.d" -MT"src/sysinit.o" -MT"src/sysinit.d" -o "src/sysinit.o" "../src/sysinit.c"
Finished building: ../src/crp.c
 
Finished building: ../src/cr_startup_lpc175x_6x.c
 
Finished building: ../src/jas.c
 
Finished building: ../src/sysinit.c
 
Building target: jas.axf
Invoking: MCU Linker
arm-none-eabi-gcc -nostdlib -L"/home/jatin/Documents/MCUXpresso_10.3.0_2200/workspace/lpc_board_nxp_lpcxpresso_1769/Debug" -L"/home/jatin/Documents/MCUXpresso_10.3.0_2200/workspace/lpc_chip_175x_6x/Debug" -Xlinker -Map="jas.map" -Xlinker --gc-sections -Xlinker -print-memory-usage -mcpu=cortex-m3 -mthumb -T "jas_Debug.ld" -o "jas.axf"  ./src/cr_startup_lpc175x_6x.o ./src/crp.o ./src/jas.o ./src/sysinit.o   -llpc_board_nxp_lpcxpresso_1769 -llpc_chip_175x_6x
/usr/local/mcuxpressoide-10.3.0_2200/ide/plugins/com.nxp.mcuxpresso.tools.linux_10.3.0.201811011841/tools/bin/../lib/gcc/arm-none-eabi/7.3.1/../../../../arm-none-eabi/bin/ld: cannot find -llpc_board_nxp_lpcxpresso_1769
makefile:30: recipe for target 'jas.axf' failed
collect2: error: ld returned 1 exit status
make: *** [jas.axf] Error 1
